spec/e2e/if/else_brackets.lit
# requires bracket after the else keyword
if false { println("bad"); } else println("bad") # error: [line 2] Error at "println": I was expecting a block after the else keyword.

# requires bracket to close the else block
if false { println("bad"); } else {
  println("bad") # error: [line 7] Error at end: I was expecting a '}' to close the block.
